--- a/equipment.html
+++ b/equipment.html
@@ -27,6 +27,7 @@
   <link rel="stylesheet" href="styles/equipment.css">
   <link rel="stylesheet" type="text/css" href="styles/jquery.fullPage.css" />
   <link rel="stylesheet" type="text/css" href="styles/jquery.hotspot.css">
+  <link rel="stylesheet" type="text/css" href="styles/litetooltip.min.css">
 </head>
 
 <body>
@@ -79,17 +80,24 @@
       <div class="photo carousel-inner">
         <div class="item photo active">
           <div class="item container equipment" id="hotspot_image">
-            <img src="images/mini-eco-hybrid.png" alt="" usemap="#Map" />
-            <map name="Map" id="Map">
-              <area alt="" title="nose" href="#" shape="poly" coords="128,26,131,76,186,77,182,28" />
-              <area alt="" title="stringer" href="#" shape="poly" coords="57,189,59,235,101,235,96,187" />
-              <area alt="" title="specs" href="#" shape="poly" coords="93,473,97,530,135,528,137,473" />
-              <area alt="" title="tail" href="#" shape="poly" coords="119,698,120,759,164,758,161,696" />
-              <area alt="" title="fins" href="#" shape="poly" coords="789,640,792,696,836,699,833,636" />
-              <area alt="" title="bottom" href="#" shape="poly" coords="862,489,863,546,901,547,897,492" />
-              <area alt="" title="brand" href="#" shape="poly" coords="862,261,865,318,904,318,900,261" />
-              <area alt="" title="rails" href="#" shape="poly" coords="857,184,862,230,899,229,898,187" />
-            </map>
+            
+            <div class="litetooltip-hotspot-wrapper" style="max-width: 531px">
+              <div class="litetooltip-hotspot-container" style="padding-bottom: 150.65913370998118%">
+                <img src="http://nalu.stevedillon.net/images/equipment/mini_eco.png" data-width="531" data-height="800" />
+                <div class="hotspot" style="top: 1.7500000000000002%; left: 23.163841807909606%; width: 3.766478342749529%; height: 2.5%; background: #4182c2; border: 1px solid #4182c2; border-radius: 50px; opacity: 0.8" id="hotspot_1511062367333" data-location="top" data-template="template" data-templatename="" data-opacity="1" data-backcolor="#000000" data-textcolor="#ffffff" data-textalign="center" data-margin="10" data-padding="10" data-width="0" data-delay="0" data-trigger="hover" data-issticky="true" data-hotspot-x="23.163841807909606" data-hotspot-y="1.7500000000000002" data-hotspot-blink="false" data-hotspot-bgcolor="#4182c2" data-hotspot-bordercolor="#4182c2" data-hotspot-borderradius="50">
+                  <div class="data-container"><strong>The Nose</strong>
+                    <br><br>
+                  Most high performance boards, like thrusters, have a pointed nose. The pointed shape adds more rail curve to the plan shape when compared to a round nose longboard.</div>
+                </div>
+
+                <div class="hotspot" style="top: 17.375%; left: 23.163841807909606%; width: 3.766478342749529%; height: 2.5%; background: #4182c2; border: 1px solid #4182c2; border-radius: 20px; opacity: 0.8" id="hotspot_1511062333091" data-location="top" data-template="" data-templatename="" data-opacity="0.8" data-backcolor="#000000" data-textcolor="#ffffff" data-textalign="center" data-margin="5" data-padding="10" data-width="0" data-delay="0" data-trigger="hover" data-issticky="true" data-hotspot-x="23.163841807909606" data-hotspot-y="17.375" data-hotspot-blink="false" data-hotspot-bgcolor="#4182c2" data-hotspot-bordercolor="#4182c2" data-hotspot-borderradius="20">
+                  <div class="data-container"><strong>Surfboard Stringer</strong>
+                    <br><br>
+                  The stringer is the thin strip of wood that traditionally runs down the middle of the surfboard. The wood is typically made of balsa and the thickness increases the strength and rigidity of the board. Some boards have multiple stringers for added stiffness.</div>
+                </div>
+
+              </div>
+            </div>
           </div>
 
           <div class="photo sub-item">
@@ -105,7 +113,17 @@
         <div class="item photo">
           <div class="item container equipment">
             <!-- <a href="#"> -->
-              <img class="item-image" src="images/mctavish_involvement.jpg" /></a>
+              <div class="litetooltip-hotspot-wrapper" style="max-width: 534px">
+                <div class="litetooltip-hotspot-container" style="padding-bottom: 149.81273408239701%">
+                  <img src="http://nalu.stevedillon.net/images/equipment/mctavish_involvement.jpg" data-width="534" data-height="800" />
+                  <div class="hotspot" style="top: 2.375%; left: 14.794007490636703%; width: 3.7453183520599254%; height: 2.5%; background: #4182c2; border: 1px solid #4182c2; border-radius: 20px; opacity: 0.8" id="hotspot_1511063311008" data-location="top" data-template="template" data-templatename="" data-opacity="0.8" data-backcolor="#000000" data-textcolor="#ffffff" data-textalign="center" data-margin="5" data-padding="10" data-width="0" data-delay="0" data-trigger="hover" data-issticky="true" data-hotspot-x="14.794007490636703" data-hotspot-y="2.375" data-hotspot-blink="false" data-hotspot-bgcolor="#4182c2" data-hotspot-bordercolor="#4182c2" data-hotspot-borderradius="20">
+                    <div class="data-container"><strong>Double Stringer</strong>
+                      <br><br>
+                    This is common in longboards for added strength.</div>
+                  </div>
+
+                </div>
+              </div>
             </div>
             <div class="photo sub-item">
               <h3>Involvement - Mctavish Surfboards</h3>
@@ -353,17 +371,15 @@
       https://github.com/aniruddhanath/jquery-hotspot -->
       <script type="text/javascript" src="scripts/jquery.hotspot.js"></script>
       <script type="text/javascript" src="scripts/imageMapResizer.min.js"></script>
+      <script type="text/javascript" src="scripts/litetooltip.min.js"></script>
+      <script type="text/javascript" src="scripts/lite_tool_tip.js"></script>
 
       <script type="text/javascript">
-        $("#hotspot_image").hotspot({
-          data: [
-          { "x":178, "y":80, "Title":"The Nose","Message":"Most high performance boards, like thrusters, have a pointed nose. The pointed shape adds more rail curve to the plan shape when compared to a round nose longboard. " },
-          { "x":90, "y":270, "Title":"Surfboard Stringer","Message":"The stringer is the thin strip of wood that traditionally runs down the middle of the surfboard. The wood is typically made of balsa and the thickness increases the strength and rigidity of the board. Some boards have multiple stringers for added stiffness." }
-          ],
-          interactivity: "click",
+
+        $('.litetooltip-hotspot-wrapper .hotspot').each(function () { 
+          $(this).LiteTooltip({ title: $(this).find('.data-container').html() });
         });
 
-        $('map').imageMapResize();
 
       </script>
     </body>
