updated image map with hotspots

--- a/equipment.html
+++ b/equipment.html
@@ -80,7 +80,8 @@
       <div class="photo carousel-inner">
         <div class="item photo active">
           <div class="item container equipment" id="hotspot_image">
-            
+
+            <!-- Created tooltip and image maps here: http://www.inabrains.com/tooltip/image-hotspot-creator.html -->
             <div class="litetooltip-hotspot-wrapper" style="max-width: 531px">
               <div class="litetooltip-hotspot-container" style="padding-bottom: 150.65913370998118%">
                 <img src="http://nalu.stevedillon.net/images/equipment/mini_eco.png" data-width="531" data-height="800" />
