--- a/equipment.html
+++ b/equipment.html
@@ -85,13 +85,13 @@
             <div class="litetooltip-hotspot-wrapper" style="max-width: 531px">
               <div class="litetooltip-hotspot-container" style="padding-bottom: 150.65913370998118%">
                 <img src="http://nalu.stevedillon.net/images/equipment/mini_eco.png" data-width="531" data-height="800" />
-                <div class="hotspot" style="top: 1.7500000000000002%; left: 23.163841807909606%; width: 3.766478342749529%; height: 2.5%; background: #4182c2; border: 1px solid #4182c2; border-radius: 50px; opacity: 0.8" id="hotspot_1511062367333" data-location="top" data-template="template" data-templatename="" data-opacity="1" data-backcolor="#000000" data-textcolor="#ffffff" data-textalign="center" data-margin="10" data-padding="10" data-width="0" data-delay="0" data-trigger="hover" data-issticky="true" data-hotspot-x="23.163841807909606" data-hotspot-y="1.7500000000000002" data-hotspot-blink="false" data-hotspot-bgcolor="#4182c2" data-hotspot-bordercolor="#4182c2" data-hotspot-borderradius="50">
+                <div class="hotspot" style="top: 1.7500000000000002%; left: 23.163841807909606%; width: 3.766478342749529%; height: 2.5%; background: #4182c2; border: 1px solid #4182c2; border-radius: 20px;" id="hotspot_1511062367333" data-location="top" data-template="template" data-templatename="" data-opacity="1" data-backcolor="#000000" data-textcolor="#ffffff" data-textalign="center" data-margin="10" data-padding="10" data-width="0" data-delay="0" data-trigger="hover" data-issticky="true" data-hotspot-x="23.163841807909606" data-hotspot-y="1.7500000000000002" data-hotspot-blink="false" data-hotspot-bgcolor="#4182c2" data-hotspot-bordercolor="#4182c2" data-hotspot-borderradius="50">
                   <div class="data-container"><strong>The Nose</strong>
                     <br><br>
                   Most high performance boards, like thrusters, have a pointed nose. The pointed shape adds more rail curve to the plan shape when compared to a round nose longboard.</div>
                 </div>
 
-                <div class="hotspot" style="top: 17.375%; left: 23.163841807909606%; width: 3.766478342749529%; height: 2.5%; background: #4182c2; border: 1px solid #4182c2; border-radius: 20px; opacity: 0.8" id="hotspot_1511062333091" data-location="top" data-template="" data-templatename="" data-opacity="0.8" data-backcolor="#000000" data-textcolor="#ffffff" data-textalign="center" data-margin="5" data-padding="10" data-width="0" data-delay="0" data-trigger="hover" data-issticky="true" data-hotspot-x="23.163841807909606" data-hotspot-y="17.375" data-hotspot-blink="false" data-hotspot-bgcolor="#4182c2" data-hotspot-bordercolor="#4182c2" data-hotspot-borderradius="20">
+                <div class="hotspot" style="top: 17.375%; left: 23.163841807909606%; width: 3.766478342749529%; height: 2.5%; background: #4182c2; border: 1px solid #4182c2; border-radius: 20px;" id="hotspot_1511062333091" data-location="top" data-template="" data-templatename="" data-opacity="0.8" data-backcolor="#000000" data-textcolor="#ffffff" data-textalign="center" data-margin="5" data-padding="10" data-width="0" data-delay="0" data-trigger="hover" data-issticky="true" data-hotspot-x="23.163841807909606" data-hotspot-y="17.375" data-hotspot-blink="false" data-hotspot-bgcolor="#4182c2" data-hotspot-bordercolor="#4182c2" data-hotspot-borderradius="20">
                   <div class="data-container"><strong>Surfboard Stringer</strong>
                     <br><br>
                   The stringer is the thin strip of wood that traditionally runs down the middle of the surfboard. The wood is typically made of balsa and the thickness increases the strength and rigidity of the board. Some boards have multiple stringers for added stiffness.</div>
@@ -117,7 +117,7 @@
               <div class="litetooltip-hotspot-wrapper" style="max-width: 534px">
                 <div class="litetooltip-hotspot-container" style="padding-bottom: 149.81273408239701%">
                   <img src="http://nalu.stevedillon.net/images/equipment/mctavish_involvement.jpg" data-width="534" data-height="800" />
-                  <div class="hotspot" style="top: 2.375%; left: 14.794007490636703%; width: 3.7453183520599254%; height: 2.5%; background: #4182c2; border: 1px solid #4182c2; border-radius: 20px; opacity: 0.8" id="hotspot_1511063311008" data-location="top" data-template="template" data-templatename="" data-opacity="0.8" data-backcolor="#000000" data-textcolor="#ffffff" data-textalign="center" data-margin="5" data-padding="10" data-width="0" data-delay="0" data-trigger="hover" data-issticky="true" data-hotspot-x="14.794007490636703" data-hotspot-y="2.375" data-hotspot-blink="false" data-hotspot-bgcolor="#4182c2" data-hotspot-bordercolor="#4182c2" data-hotspot-borderradius="20">
+                  <div class="hotspot" style="top: 2.375%; left: 14.794007490636703%; width: 3.7453183520599254%; height: 2.5%; background: #4182c2; border: 1px solid #4182c2; border-radius: 20px;" id="hotspot_1511063311008" data-location="top" data-template="template" data-templatename="" data-opacity="0.8" data-backcolor="#000000" data-textcolor="#ffffff" data-textalign="center" data-margin="5" data-padding="10" data-width="0" data-delay="0" data-trigger="hover" data-issticky="true" data-hotspot-x="14.794007490636703" data-hotspot-y="2.375" data-hotspot-blink="false" data-hotspot-bgcolor="#4182c2" data-hotspot-bordercolor="#4182c2" data-hotspot-borderradius="20">
                     <div class="data-container"><strong>Double Stringer</strong>
                       <br><br>
                     This is common in longboards for added strength.</div>
@@ -370,8 +370,6 @@
 
     <!-- Hotspot JQuery Plugin 
       https://github.com/aniruddhanath/jquery-hotspot -->
-      <script type="text/javascript" src="scripts/jquery.hotspot.js"></script>
-      <script type="text/javascript" src="scripts/imageMapResizer.min.js"></script>
       <script type="text/javascript" src="scripts/litetooltip.min.js"></script>
       <script type="text/javascript" src="scripts/lite_tool_tip.js"></script>
 
