--- a/equipment.html
+++ b/equipment.html
@@ -78,10 +78,10 @@
     <!-- Image Carousel 
     <div id="photo-carousel" class="carousel slide equipment" data-ride="carousel">
       <div class="photo carousel-inner">
-        <div class="item photo active">
-          <div class="item container equipment" id="hotspot_image">
+        <div class="item photo active"> -->
+          <div class="item container equipment" id="hotspot">
 
-            Created tooltip and image maps here: http://www.inabrains.com/tooltip/image-hotspot-creator.html -->
+            <!-- Created tooltip and image maps here: http://www.inabrains.com/tooltip/image-hotspot-creator.html -->
             
             <div class="litetooltip-hotspot-wrapper" style="max-width: 531px">
               <div class="litetooltip-hotspot-container" style="padding-bottom: 150.65913370998118%">
