added carousel back in - tooltip still not working

--- a/equipment.html
+++ b/equipment.html
@@ -75,10 +75,10 @@
       <h1>Surfing Equipment</h1>
     </div>
 
-    <!-- Image Carousel 
+    <!-- Image Carousel -->
     <div id="photo-carousel" class="carousel slide equipment" data-ride="carousel">
       <div class="photo carousel-inner">
-        <div class="item photo active"> -->
+        <div class="item photo active">
           <div class="item container equipment" id="hotspot">
 
             <!-- Created tooltip and image maps here: http://www.inabrains.com/tooltip/image-hotspot-creator.html -->
@@ -110,6 +110,23 @@
 
             <p id="col">More details: <a href="https://www.cisurfboards.com/board/mini/" target="_blank">Mini Eco Hybrid</a></p>
           </div>
+        </div>
+
+        <div class="item photo">
+          <div class="item container equipment">
+            <!-- <a href="#"> -->
+              <img class="item-image" src="images/mctavish_involvement.jpg" /></a>
+            </div>
+            <div class="photo sub-item">
+              <h3>Involvement - Mctavish Surfboards</h3>
+              <p id="col">We developed the Involvement in 1966, a variation on our Noosa 66 model. It’s the extreme end of the "Pig" template where the tail measurement (12” up) is wider than the nose. Pigs were pioneered by Dale Velzy at Malibu in the late 50s, good trimmers and nose riders found the template more nimble off the tail, and far faster in trim, and nose-riding wasn’t really hurt at all, surprisingly. We considered the design a little extreme until Matty Chojnacki urged us to make him one a few years back. He absolutely ripped on it, with gliding drop-ins followed by a snappy bottom turn, fast nimble walking, in-the-slot trimming, tight nose-rides, and high kick stalls. A real thriller, the Involvement is the extreme end of the pivot-trim-noseride approach for small lined up waves today.</p>
+
+              <p id="col">Designer: Bob McTavish</p>
+
+              <p id="col">More details: <a href="https://www.mctavish.com.au/collections/involvements" target="_blank">Involvement - Mctavish Surfboards</a></p>
+            </div>
+          </div>
+
         </div>
 
         <a class="left equipment carousel-control" data-target="#photo-carousel" data-slide="prev">
