--- a/photo.html
+++ b/photo.html
@@ -119,7 +119,8 @@
             <!-- Image Grid Row 1 -->
             <div class="photog-group clearfix">
               <figure class="cap-bot">
-                <a href="#"><img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
+                <a href="#myModal" class="modalImg image-border image-border" data-toggle="modal">
+                  <img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
                 <figcaption>
                   Bruce Brown, Malibu, CA
                 </figcaption>
@@ -128,7 +129,8 @@
 
             <div class="photog-group clearfix">
               <figure class="cap-bot">
-                <a href="#"><img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
+                <a href="#myModal" class="modalImg image-border image-border" data-toggle="modal">
+                  <img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
                 <figcaption>
                   Bruce Brown, Malibu, CA
                 </figcaption>
@@ -137,7 +139,8 @@
 
             <div class="photog-group clearfix">
               <figure class="cap-bot">
-                <a href="#"><img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
+                <a href="#myModal" class="modalImg image-border image-border" data-toggle="modal">
+                  <img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
                 <figcaption>
                   Bruce Brown, Malibu, CA
                 </figcaption>
@@ -147,7 +150,8 @@
             <!-- Image Grid Row 2 -->
             <div class="photog-group clearfix">
               <figure class="cap-bot">
-                <a href="#"><img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
+                <a href="#myModal" class="modalImg image-border image-border" data-toggle="modal">
+                  <img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
                 <figcaption>
                   Bruce Brown, Malibu, CA
                 </figcaption>
@@ -156,7 +160,8 @@
 
             <div class="photog-group clearfix">
               <figure class="cap-bot">
-                <a href="#"><img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
+                <a href="#myModal" class="modalImg image-border image-border" data-toggle="modal">
+                  <img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
                 <figcaption>
                   Bruce Brown, Malibu, CA
                 </figcaption>
@@ -165,7 +170,8 @@
 
             <div class="photog-group clearfix">
               <figure class="cap-bot">
-                <a href="#"><img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
+                <a href="#myModal" class="modalImg image-border image-border" data-toggle="modal">
+                  <img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
                 <figcaption>
                   Bruce Brown, Malibu, CA
                 </figcaption>
@@ -175,7 +181,8 @@
             <!-- Image Grid Row 3 -->
             <div class="photog-group clearfix">
               <figure class="cap-bot">
-                <a href="#"><img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
+                <a href="#myModal" class="modalImg image-border image-border" data-toggle="modal">
+                  <img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
                 <figcaption>
                   Bruce Brown, Malibu, CA
                 </figcaption>
@@ -184,7 +191,8 @@
 
             <div class="photog-group clearfix">
               <figure class="cap-bot">
-                <a href="#"><img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
+                <a href="#myModal" class="modalImg image-border image-border" data-toggle="modal">
+                  <img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
                 <figcaption>
                   Bruce Brown, Malibu, CA
                 </figcaption>
@@ -193,7 +201,8 @@
 
             <div class="photog-group clearfix">
               <figure class="cap-bot">
-                <a href="#"><img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
+                <a href="#myModal" class="modalImg image-border image-border" data-toggle="modal">
+                  <img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
                 <figcaption>
                   Bruce Brown, Malibu, CA
                 </figcaption>
@@ -203,6 +212,93 @@
           </div>
         </div>
       </div> 
+
+<!-- Modal Code Start -->
+        <div class="modal fade  " id="myModal" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false" data-interval="false">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+
+                </div>
+
+                <div class="modal-body">
+                  <!-- Indicators -->
+                  <div class="carousel slide" data-interval="false" id="MyCarousel">
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner timeline">
+
+                      <!-- 1st Modal in Timeline -->
+                      <div class="item active">
+                        
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+
+                        <div class="row">
+                          <h1>First Surfing Recorded</h1>
+                          <div class="col-1">
+                            <img src="images/boards.png" id="img1" alt="" /></a>
+                          </div>
+
+                          <div class="col-2">
+                            <div class="description"></div>
+                            <p>In the bricks 3rd reef burner oil rip the pit fair-good point break sand bottom. Elevator drop heavy slice healthy float tomb-stoning kelp slash quiver sand bottom A frames wonky.</p>
+                          </div>
+                        </div>
+                      </div>
+
+                      <!-- 2nd Modal in Timeline -->
+                      <div class="item">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+
+                        <div class="row">
+                          <div class="col-1">
+                            <h1>Service Infrastructure</h1>
+                            <img src="images/taihitian_surfers_joseph_banks_lg.jpg" id="img2" alt="" /></a>
+                          </div>
+
+                          <div class="col-2">
+                            <div class="description"></div>
+                            <p>In the bricks 3rd reef burner oil rip the pit fair-good point break sand bottom. Elevator drop heavy slice healthy float tomb-stoning kelp slash quiver sand bottom A frames wonky.</p>
+                          </div>
+                        </div>
+                      </div>
+
+                      <!-- 3rd Modal in Timeline -->
+                      <div class="item">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+
+                        <div class="row">
+                          <div class="col-1">
+                            <h1>Tom Blake and Sam Reid surf Malibu for the first time</h1>
+                            <img src="images/rawImage_pcr_fred_windisch.jpg" id="img2" alt="" /></a>
+                          </div>
+
+                          <div class="col-2">
+                            <div class="description"></div>
+                            <p>In the bricks 3rd reef burner oil rip the pit fair-good point break sand bottom. Elevator drop heavy slice healthy float tomb-stoning kelp slash quiver sand bottom A frames wonky.</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <!-- Controls -->
+                    <a href="#MyCarousel" class="left carousel-control timeline" data-slide="prev"><span class="glyphicon left"></span></a>
+                    <a href="#MyCarousel" class="right carousel-control timeline" data-slide="next"><span class="glyphicon right"></a>
+
+                  </div>
+
+                </div>
+              </div>
+          </div>
+        </div>
+      </section>
+    </div>
 
       <!-- Footer Start -->
       <div class="section" id="section7">
