--- a/about.html
+++ b/about.html
@@ -50,10 +50,20 @@
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
             <ul class="nav navbar-nav">
               <!-- <li class="active"><a href="index.html">Home</a></li> -->
-              <li><a href="timeline.html">Timeline</a></li>
+              <li class="dropdown">
+                <a href="timeline.html" class="dropdown-toggle" data-toggle="dropdown">Timeline <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">1900's</a></li>
+                  <li><a href="#">1950's</a></li>
+                  <li><a href="#">1960's</a></li>
+                  <li><a href="#">1960's</a></li>
+                  <li><a href="#">1960's</a></li>
+                  <li><a href="#">1960's</a></li>
+                  <li><a href="#">1960's</a></li>
+                </ul>
+              </li>
               <li><a href="photo.html">Photo</a></li>
               <li><a href="equipment.html">Equipment</a></li>
               <li><a href="about.html">About</a></li>
