--- a/photo.html
+++ b/photo.html
@@ -15,6 +15,7 @@
   <script src="scripts/bootstrap.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
   <script type="text/javascript" src="scripts/jquery.fullPage.min.js"></script>
+  <script src="scripts/main.js"></script>
 
   <!-- Start CSS -->
   <link rel="stylesheet" href="styles/bootstrap.css" />
@@ -38,7 +39,7 @@
       <div class="navbar navbar-default relative relative" role="navigation">
         <div class="container">
           <div class="navbar-header">
-            <a class="navbar-brand" href="index.html"><img class="logo" src="images/logo.png" ></a>
+            <a class="navbar-brand" href="index.html"><img class="logo" src="images/logo.png" alt="logo"></a>
 
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
@@ -49,10 +50,20 @@
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
             <ul class="nav navbar-nav">
               <!-- <li class="active"><a href="index.html">Home</a></li> -->
-              <li><a href="timeline.html">Timeline</a></li>
+              <li class="dropdown">
+                <a href="timeline.html" class="dropdown-toggle" data-toggle="dropdown">Timeline <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">1900's</a></li>
+                  <li><a href="#">1950's</a></li>
+                  <li><a href="#">1960's</a></li>
+                  <li><a href="#">1960's</a></li>
+                  <li><a href="#">1960's</a></li>
+                  <li><a href="#">1960's</a></li>
+                  <li><a href="#">1960's</a></li>
+                </ul>
+              </li>
               <li><a href="photo.html">Photo</a></li>
               <li><a href="equipment.html">Equipment</a></li>
               <li><a href="about.html">About</a></li>
@@ -77,7 +88,7 @@
           <div class="photo carousel-inner">
             <div class="item photo active">
               <div class="item photo container">
-                <a href="#"><img class="item-image" src="images/bruce.png" /></a>
+                <a href="#"><img class="item-image" src="images/bruce.png" alt="bruce_brown" /></a>
               </div>
               <div class="photo sub-item">
                 <h3>Bruce Brown</h3>
@@ -88,7 +99,7 @@
             </div>
             <div class="item photo">
               <div class="item photo container">
-                <a href="#"><img class="item-image" src="images/trip.png" /></a>
+                <a href="#"><img class="item-image" src="images/trip.png" alt="trip" /></a>
               </div>
               <div class="photo sub-item">
                 <h3>Chris Burkhard</h3>
@@ -119,8 +130,8 @@
             <!-- Image Grid Row 1 -->
             <div class="photog-group clearfix">
               <figure class="cap-bot">
-                <a href="#myModal" class="modalImg image-border image-border" data-toggle="modal">
-                  <img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
+                <a href="#myModal" class="modalImg" data-toggle="modal">
+                  <img class="photog-headshot" src="images/camera.png"></a>
                 <figcaption>
                   Bruce Brown, Malibu, CA
                 </figcaption>
@@ -129,8 +140,8 @@
 
             <div class="photog-group clearfix">
               <figure class="cap-bot">
-                <a href="#myModal" class="modalImg image-border image-border" data-toggle="modal">
-                  <img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
+                <a href="#myModal" class="modalImg" data-toggle="modal">
+                  <img class="photog-headshot" src="images/camera.png"></a>
                 <figcaption>
                   Bruce Brown, Malibu, CA
                 </figcaption>
@@ -139,8 +150,8 @@
 
             <div class="photog-group clearfix">
               <figure class="cap-bot">
-                <a href="#myModal" class="modalImg image-border image-border" data-toggle="modal">
-                  <img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
+                <a href="#myModal" class="modalImg" data-toggle="modal">
+                  <img class="photog-headshot" src="images/camera.png"></a>
                 <figcaption>
                   Bruce Brown, Malibu, CA
                 </figcaption>
@@ -150,8 +161,8 @@
             <!-- Image Grid Row 2 -->
             <div class="photog-group clearfix">
               <figure class="cap-bot">
-                <a href="#myModal" class="modalImg image-border image-border" data-toggle="modal">
-                  <img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
+                <a href="#myModal" class="modalImg" data-toggle="modal">
+                  <img class="photog-headshot" src="images/camera.png"></a>
                 <figcaption>
                   Bruce Brown, Malibu, CA
                 </figcaption>
@@ -160,8 +171,8 @@
 
             <div class="photog-group clearfix">
               <figure class="cap-bot">
-                <a href="#myModal" class="modalImg image-border image-border" data-toggle="modal">
-                  <img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
+                <a href="#myModal" class="modalImg" data-toggle="modal">
+                  <img class="photog-headshot" src="images/camera.png"></a>
                 <figcaption>
                   Bruce Brown, Malibu, CA
                 </figcaption>
@@ -170,8 +181,8 @@
 
             <div class="photog-group clearfix">
               <figure class="cap-bot">
-                <a href="#myModal" class="modalImg image-border image-border" data-toggle="modal">
-                  <img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
+                <a href="#myModal" class="modalImg" data-toggle="modal">
+                  <img class="photog-headshot" src="images/camera.png"></a>
                 <figcaption>
                   Bruce Brown, Malibu, CA
                 </figcaption>
@@ -181,8 +192,8 @@
             <!-- Image Grid Row 3 -->
             <div class="photog-group clearfix">
               <figure class="cap-bot">
-                <a href="#myModal" class="modalImg image-border image-border" data-toggle="modal">
-                  <img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
+                <a href="#myModal" class="modalImg" data-toggle="modal">
+                  <img class="photog-headshot" src="images/camera.png"></a>
                 <figcaption>
                   Bruce Brown, Malibu, CA
                 </figcaption>
@@ -191,8 +202,8 @@
 
             <div class="photog-group clearfix">
               <figure class="cap-bot">
-                <a href="#myModal" class="modalImg image-border image-border" data-toggle="modal">
-                  <img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
+                <a href="#myModal" class="modalImg" data-toggle="modal">
+                  <img class="photog-headshot" src="images/camera.png"></a>
                 <figcaption>
                   Bruce Brown, Malibu, CA
                 </figcaption>
@@ -201,8 +212,8 @@
 
             <div class="photog-group clearfix">
               <figure class="cap-bot">
-                <a href="#myModal" class="modalImg image-border image-border" data-toggle="modal">
-                  <img class="photog-headshot" src="images/camera.png" class="img-thumbnail"></a>
+                <a href="#myModal" class="modalImg" data-toggle="modal">
+                  <img class="photog-headshot" src="images/camera.png"></a>
                 <figcaption>
                   Bruce Brown, Malibu, CA
                 </figcaption>
@@ -218,7 +229,6 @@
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-
                 </div>
 
                 <div class="modal-body">
@@ -236,9 +246,9 @@
                         </button>
 
                         <div class="row">
-                          <h1>First Surfing Recorded</h1>
+                          <h1>Stan Moniz, Orange County, CA</h1>
                           <div class="col-1">
-                            <img src="images/boards.png" id="img1" alt="" /></a>
+                            <img src="images/camera.png" id="img1" alt="" />
                           </div>
 
                           <div class="col-2">
@@ -256,8 +266,8 @@
 
                         <div class="row">
                           <div class="col-1">
-                            <h1>Service Infrastructure</h1>
-                            <img src="images/taihitian_surfers_joseph_banks_lg.jpg" id="img2" alt="" /></a>
+                            <h1>Stan Moniz, Orange County, CA</h1>
+                            <img src="images/camera.png" id="img2" alt="" />
                           </div>
 
                           <div class="col-2">
@@ -275,8 +285,8 @@
 
                         <div class="row">
                           <div class="col-1">
-                            <h1>Tom Blake and Sam Reid surf Malibu for the first time</h1>
-                            <img src="images/rawImage_pcr_fred_windisch.jpg" id="img2" alt="" /></a>
+                            <h1>Stan Moniz, Orange County, CA</h1>
+                            <img src="images/camera.png" id="img3" alt="" />
                           </div>
 
                           <div class="col-2">
@@ -297,7 +307,6 @@
               </div>
           </div>
         </div>
-      </section>
     </div>
 
       <!-- Footer Start -->
@@ -404,15 +413,15 @@
 
             <ul class="nav footer navbar-nav">
               <!-- <li class="active"><a href="index.html">Home</a></li> -->
-              <li><a ui-sref="timeline">Timeline</a></li>
-              <li><a ui-sref="photo">Photo</a></li>
-              <li><a ui-sref="about">About</a></li>
-              <li><a ui-sref="contact">Contact</a></li>
+              <li><a href="timeline.html">Timeline</a></li>
+              <li><a href="photo.html">Photo</a></li>
+              <li><a href="equipment.html">Equipment</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="share.html">Share</a></li>
             </ul>
           </div>
         </div>
       </div>
-    </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
@@ -425,6 +434,7 @@
 
       ga('create', 'UA-102205886-1');
       ga('send', 'pageview');
+    </script>
   </body>
 
-  </html>
+</html>
