connected mailchimp signup form

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
               <li class="dropdown">
                 <a href="timeline.html" class="dropdown-toggle" data-toggle="dropdown">Timeline <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">1900's</a></li>
-                  <li><a href="#">1950's</a></li>
-                  <li><a href="#">1960's</a></li>
-                  <li><a href="#">1960's</a></li>
-                  <li><a href="#">1960's</a></li>
-                  <li><a href="#">1960's</a></li>
-                  <li><a href="#">1960's</a></li>
+                  <li><a href="timeline.html">1900's</a></li>
+                  <li><a href="timeline.html#1950's">1950's</a></li>
+                  <li><a href="timeline.html#1960's">1960's</a></li>
+                  <li><a href="timeline.html#1970's">1960's</a></li>
+                  <li><a href="timeline.html#1980's">1960's</a></li>
+                  <li><a href="timeline.html#1990's">1960's</a></li>
+                  <li><a href="timeline.html#2000's">1960's</a></li>
                 </ul>
               </li>
               <li><a href="photo.html">Photo</a></li>
@@ -243,106 +243,113 @@
             <!-- Column 3 -->
             <div class="col-md-4">
               <h5>Newsletter</h5>
-              <form>
+
+              <!--Start mc_embed_signup-->
+              <form action="https://stevedillon.us10.list-manage.com/subscribe/post?u=1d58f9ef366258591bc129b44&amp;id=252074c059" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div class="form-group">
-                  <input type="email" class="form-control" id="email-input" aria-describedby="emailHelp" placeholder="Enter Your Email">
+                  <input type="email" name="EMAIL" class="form-control" id="mce-EMAIL" aria-describedby="emailHelp" placeholder="Enter Your Email" required>
                   <br>
-                  <input class="form-control" type="text" placeholder="Enter Your Name" id="text-input">
+                  <input class="form-control" type="text" name="FNAME" placeholder="Enter Your Name" id="mce-FNAME">
+                  <br>
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1d58f9ef366258591bc129b44_252074c059" tabindex="-1" value=""></div>
+                  <div class="clear">
+                    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                  </div>
+                </form>
+              </div>
+            </div>
+
+            <!-- Row 2 -->
+            <div class="top-2 row">
+              <!-- Column 1 -->
+              <div class="col-md-4">
+                <h5>Get Connected</h5>
+                <div class="flex-container">
+                  <div class="imGrid social">
+                    <div class="flex-item social">
+                      <a href="https://www.facebook.com/SteveDillonDesigns/" target="_blank"><img src="images/facebook.png" alt="facebook.png"></a>
+                    </div>
+                    <div class="flex-item social">
+                      <a href="https://www.instagram.com/stevedillonphoto" target="_blank"><img src="images/instagram.png" alt="instagram.png"></a>
+                    </div>
+                    <div class="flex-item social">
+                      <a href="https://www.linkedin.com/in/stevedillon1/" target="_blank"><img src="images/linkedin.png" alt="linkedin.png"></a>
+                    </div>
+                    <div class="flex-item social">
+                      <a href="https://plus.google.com/u/0/111716399104478997939" target="_blank"><img src="images/google_plus.png" alt="google_plus.png"></a>
+                    </div>
+                  </div>
                 </div>
-              </form>
+              </div>
+              <!-- Column 2 -->
+              <div class="col-md-4">
+                <h5>Instagram</h5>
+                <div class="flex-container">
+                  <div class="imGrid">
+                    <div class="flex-item"><img src="images/party.png" alt="Grid Image"></div>
+                    <div class="flex-item"><img src="images/grid1.jpg" alt="Grid Image"></div>
+                    <div class="flex-item"><img src="images/trip.png" alt="Photo Credit: Cris Burkhard: http://www.chrisburkard.com/"></div>
+                    <div class="flex-item"><img src="images/malibu.png" alt="Grid Image"></div>
+                    <div class="flex-item"><img src="images/grid5.jpg" alt="Grid Image"></div>
+                    <div class="flex-item"><img src="images/boards.png" alt="Grid Image"></div>
+                    <div class="flex-item"><img src="images/barrel.png" alt="Grid Image"></div>
+                    <div class="flex-item"><img src="images/bruce.png" alt="Grid Image"></div>
+                  </div>
+                </div>
+              </div>
+              <!-- Column 3 -->
+              <div class="col-md-4">
+                <h5>Contributors List</h5>
+                <ul class="footer-list">
+                  <li><a href="http://shacc.org/" target="_blank">Surfing Heritage and Culture Center</a></li>
+                  <li>Museum of Surf.com</li>
+                  <li>Surfline.com</li>
+                  <li>The Surfers Journal.com</li>
+                  <li>Surfer Magazine.com</li>
+                  <li>Surfing Magazine.com</li>
+                  <li>Magicseaweed.com</li>
+                  <li>World Surf League</li>
+                  <li>Surf Science.com</li>
+                  <li>A-Frame Photo</li>
+                </ul>
+              </div>
             </div>
           </div>
+        </div>
 
-          <!-- Row 2 -->
-          <div class="top-2 row">
+        <div class="container-fluid">
+          <!-- Row 1 -->
+          <div class="bottom row">
             <!-- Column 1 -->
-            <div class="col-md-4">
-              <h5>Get Connected</h5>
-              <div class="flex-container">
-                <div class="imGrid social">
-                  <div class="flex-item social">
-                    <a href="https://www.facebook.com/SteveDillonDesigns/" target="_blank"><img src="images/facebook.png" alt="facebook.png"></a>
-                  </div>
-                  <div class="flex-item social">
-                    <a href="https://www.instagram.com/stevedillonphoto" target="_blank"><img src="images/instagram.png" alt="instagram.png"></a>
-                  </div>
-                  <div class="flex-item social">
-                    <a href="https://www.linkedin.com/in/stevedillon1/" target="_blank"><img src="images/linkedin.png" alt="linkedin.png"></a>
-                  </div>
-                  <div class="flex-item social">
-                    <a href="https://plus.google.com/u/0/111716399104478997939" target="_blank"><img src="images/google_plus.png" alt="google_plus.png"></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Column 2 -->
-            <div class="col-md-4">
-              <h5>Photostream</h5>
-              <div class="flex-container">
-                <div class="imGrid">
-                  <div class="flex-item"><img src="images/party.png" alt="Grid Image"></div>
-                  <div class="flex-item"><img src="images/grid1.jpg" alt="Grid Image"></div>
-                  <div class="flex-item"><img src="images/trip.png" alt="Photo Credit: Cris Burkhard: http://www.chrisburkard.com/"></div>
-                  <div class="flex-item"><img src="images/malibu.png" alt="Grid Image"></div>
-                  <div class="flex-item"><img src="images/grid5.jpg" alt="Grid Image"></div>
-                  <div class="flex-item"><img src="images/boards.png" alt="Grid Image"></div>
-                  <div class="flex-item"><img src="images/barrel.png" alt="Grid Image"></div>
-                  <div class="flex-item"><img src="images/bruce.png" alt="Grid Image"></div>
-                </div>
-              </div>
-            </div>
-            <!-- Column 3 -->
-            <div class="col-md-4">
-              <h5>Sources</h5>
-              <ul class="footer-list">
-                <li>Museum of Surf.com</li>
-                <li>Surfing Heritage.org</li>
-                <li>Surfline.com</li>
-                <li>The Surfers Journal.com</li>
-                <li>Surfer Magazine.com</li>
-                <li>Surfing Magazine.com</li>
-                <li>Magicseaweed.com</li>
-                <li>World Surf League</li>
-                <li>Surf Science.com</li>
-                <li>A-Frame Photo</li>
+            <div class="col-md-12">
+              <h5><a href="index.html">© 2017 Nalu.com</a></h5>
+
+              <ul class="nav footer navbar-nav">
+                <!-- <li class="active"><a href="index.html">Home</a></li> -->
+                <li><a href="timeline.html">Timeline</a></li>
+                <li><a href="photo.html">Photo</a></li>
+                <li><a href="equipment.html">Equipment</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="share.html">Share</a></li>
               </ul>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="container-fluid">
-        <!-- Row 1 -->
-        <div class="bottom row">
-          <!-- Column 1 -->
-          <div class="col-md-12">
-            <h5><a href="index.html">© 2017 Nalu.com</a></h5>
+      <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+      <script>
+        ! function(A, n, g, u, l, a, r) {
+          A.GoogleAnalyticsObject = l, A[l] = A[l] || function() {
+            (A[l].q = A[l].q || []).push(arguments)
+          }, A[l].l = +new Date, a = n.createElement(g),
+          r = n.getElementsByTagName(g)[0], a.src = u, r.parentNode.insertBefore(a, r)
+        }(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-            <ul class="nav footer navbar-nav">
-              <!-- <li class="active"><a href="index.html">Home</a></li> -->
-              <li><a href="timeline.html">Timeline</a></li>
-              <li><a href="photo.html">Photo</a></li>
-              <li><a href="equipment.html">Equipment</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="share.html">Share</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
+        ga('create', 'UA-102205886-1');
+        ga('send', 'pageview');
+      </script>
+    </body>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-    <script>
-      ! function(A, n, g, u, l, a, r) {
-        A.GoogleAnalyticsObject = l, A[l] = A[l] || function() {
-          (A[l].q = A[l].q || []).push(arguments)
-        }, A[l].l = +new Date, a = n.createElement(g),
-        r = n.getElementsByTagName(g)[0], a.src = u, r.parentNode.insertBefore(a, r)
-      }(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-      ga('create', 'UA-102205886-1');
-      ga('send', 'pageview');
-    </script>
-  </body>
-
-  </html>
+    </html>
